<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.bankoflunar.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_activity"
        android:name="com.example.bankoflunar.ui.activity.ActivityFragment"
        android:label="@string/menu_activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/nav_investing"
        android:name="com.example.bankoflunar.ui.investing.InvestingFragment"
        android:label="@string/menu_investing"
        tools:layout="@layout/fragment_investing" />

    <fragment
        android:id="@+id/nav_trading"
        android:name="com.example.bankoflunar.ui.trading.TradingFragment"
        android:label="@string/menu_trading"
        tools:layout="@layout/fragment_trading" />

    <fragment
        android:id="@+id/nav_real_estate"
        android:name="com.example.bankoflunar.ui.realEstate.RealEstateFragment"
        android:label="@string/menu_real_estate"
        tools:layout="@layout/fragment_real_estate" />

    <fragment
        android:id="@+id/nav_deposit"
        android:name="com.example.bankoflunar.ui.deposit.DepositFragment"
        android:label="@string/menu_deposit"
        tools:layout="@layout/fragment_deposit" />

    <fragment
        android:id="@+id/nav_withdraw"
        android:name="com.example.bankoflunar.ui.withdraw.WithdrawFragment"
        android:label="@string/menu_withdraw"
        tools:layout="@layout/fragment_withdraw" />

    <fragment
        android:id="@+id/nav_transfer"
        android:name="com.example.bankoflunar.ui.transfer.TransferFragment"
        android:label="@string/menu_transfer"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/nav_rewards"
        android:name="com.example.bankoflunar.ui.rewards.RewardsFragment"
        android:label="@string/menu_rewards"
        tools:layout="@layout/fragment_rewards" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bankoflunar.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>