<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.investing.InvestingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/basic_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="@dimen/card_cornerRadius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/myPurple"
                    android:text="@string/basic_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/investment_textSize"
                    android:text="@string/investment_text"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView_basic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/rectangle_1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$2500"
                        android:layout_alignStart="@id/imageView_basic"
                        android:layout_alignEnd="@id/imageView_basic"
                        android:layout_alignBottom="@id/imageView_basic"
                        android:layout_alignTop="@id/imageView_basic"
                        android:gravity="center"
                        android:textColor="#FFFFFF"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/myPurple"
                    android:text="@string/textView_basic_interest"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/myPurple"
                    android:text="@string/textview_basic_interestUpdate"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/myPurple"
                    android:text="@string/textView_basic_duration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/myPurple"
                    android:text="@string/textView_basic_capital"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:text="@string/button_basic"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>






        <androidx.cardview.widget.CardView
            android:id="@+id/black_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_cornerRadius"
            app:cardElevation="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/basic_cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/myPurple"
                    android:text="@string/black_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/investment_textSize"
                    android:text="@string/investment_text"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/rectangle_1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$25000"
                        android:layout_alignStart="@id/imageView_black"
                        android:layout_alignEnd="@id/imageView_black"
                        android:layout_alignBottom="@id/imageView_black"
                        android:layout_alignTop="@id/imageView_black"
                        android:gravity="center"
                        android:textColor="#FFFFFF"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/myPurple"
                    android:text="@string/textView_black_interest"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/myPurple"
                    android:textStyle="bold"
                    android:text="@string/textview_black_interestUpdate"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/myPurple"
                    android:text="@string/textView_black_duration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/myPurple"
                    android:text="@string/textView_black_capital"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:text="@string/button_black"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>






        <androidx.cardview.widget.CardView
            android:id="@+id/retirement_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_cornerRadius"
            app:cardElevation="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            app:cardBackgroundColor="@color/myPurple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/black_cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/retirement_text"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/investment_textSize"
                    android:textColor="@color/white"
                    android:text="@string/Trading_text"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView_retirement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/rectangle_1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$1000000"
                        android:layout_alignStart="@id/imageView_retirement"
                        android:layout_alignEnd="@id/imageView_retirement"
                        android:layout_alignBottom="@id/imageView_retirement"
                        android:layout_alignTop="@id/imageView_retirement"
                        android:gravity="center"
                        android:textColor="#FFFFFF"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/textView_retirement_interest"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/textview_retirement_interestUpdate"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/textView_retirement_duration"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/textView_retirement_capital"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/myPurple"
                    android:textStyle="bold"
                    android:text="@string/button_retirement"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retirement_cardView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>