<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.realEstate.RealEstateFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/basic_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="@dimen/card_cornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/myPurple"
                android:text="@string/realEstate_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="@dimen/investment_textSize"
                android:text="@string/realEstate_text"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView_basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/rectangle_1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$50000"
                    android:layout_alignStart="@id/imageView_basic"
                    android:layout_alignEnd="@id/imageView_basic"
                    android:layout_alignBottom="@id/imageView_basic"
                    android:layout_alignTop="@id/imageView_basic"
                    android:gravity="center"
                    android:textColor="#FFFFFF"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/myPurple"
                android:text="@string/textView_realEstate_interest"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/myPurple"
                android:text="@string/textview_realEstate_interestUpdate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/myPurple"
                android:text="@string/textView_realEstate_duration"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/myPurple"
                android:text="@string/textView_realEstate_capital"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:text="@string/button_basic"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>